--- a/templates/main.html
+++ b/templates/main.html
@@ -1,133 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="next.css">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <title>todo-list</title>
-    <style>
-        body {
-            margin: 0;
-            position: fixed;
-        }
-
-        #emoji {
-            position: absolute;
-            width: 10%;
-            height: 10%;
-            left: 2%;
-            top: 7%;
-            font-family: 'Pretendard';
-            font-style: normal;
-            font-weight: 900;
-            font-size: 5em;
-            line-height: 10%;
-            color: #FFFFFF;
-        }
-
-        #container {
-            position: relative;
-            width: 100vw;
-            height: 100vh;
-            background: #FFFFFF;
-        }
-
-        #rectangle1 {
-            position: absolute;
-            width: 100%;
-            height: 16%;
-            background: rgba(255, 0, 0, 0.733333);
-        }
-        #group2 {
-            position: absolute;
-            width: 22%;
-            height: 20%;
-            left: 39%;
-            top: 40%;
-        }
-
-        #button {
-            position: absolute;
-            width: 30%;
-            height: 30%;
-            background: #FF0000;
-            border-radius: 10px;
-            font-size: 1.5em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: 'Pretendard';
-            font-style: normal;
-            font-weight: 900;
-            color: #FFFFFF;
-            right: -160%;
-            bottom: -180%;
-            border-radius: 4.6875em;
-        }
-        #btn {
-            position: absolute;
-            bottom: 80%;
-        }
-    </style>
-
-</head>
-<body>
-    <div id="container">
-        <div id="background">
-            <div id="rectangle1"></div>
-            <div id="emoji">🚨</div>
-        </div>
-    </div>
-
-    <input id="btn" class="btn btn-primary" value="todos">
-    <table>
-        <thead>
-            <td>order</td>
-            <td>time</td>
-            <td>image</td>
-        </thead>
-        <tbody id="todo-list"></tbody>
-    </table>
-
-    <script>
-        let btn = document.querySelector('#btn');
-
-        btn.addEventListener('click', () => {
-            $.ajax({
-                type: 'GET',
-                url: '/get_data',  // Flask 서버의 '/get_data' 라우트에 요청을 보냅니다.
-                dataType: 'json'
-            }).done(result => {
-                // 이미지와 시간 값을 HTML 테이블에 추가하는 코드
-                let tbody = document.querySelector('#todo-list');
-
-                let row = document.createElement('tr');
-
-                let orderCell = document.createElement('td');
-                orderCell.textContent = "1";  // 순서값을 지정하거나 DB에서 받아온 값으로 대체해야 합니다.
-                row.appendChild(orderCell);
-
-                let timeCell = document.createElement('td');
-                timeCell.textContent = result.capture_time;  // DB에서 받아온 시간 값을 표시합니다.
-                row.appendChild(timeCell);
-
-                let imageCell = document.createElement('td');
-                let img = document.createElement('img');
-                img.src = "data:image/jpeg;base64," + result.img_data;  // DB에서 받아온 이미지 값을 표시합니다.
-                imageCell.appendChild(img);
-                row.appendChild(imageCell);
-
-                tbody.appendChild(row);
-            });
-        });
-    </script>
-</body>
-
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -216,7 +86,16 @@
             <td>time</td>
             <td>image</td>
         </thead>
-        <tbody id="todo-list"></tbody>
+        <tbody id="todo-list">
+                {% for data in db_data %}
+                <tr>
+                    <td>{{ data.order }}</td>
+                    <td>{{ data.time }}</td>
+                    <td><img src="data:image/jpeg;base64,{{ data.img_data }}" /></td>
+                </tr>
+                {% endfor %}
+            
+        </tbody>
     </table>
 
     <script>
@@ -279,6 +158,7 @@
             }
             return imageData;
         }
+        
     </script>
 </body>
 
